# Natural-Language-Database-Query-System-using-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  configuration.md  usage.md
examples/: simple_query.py
src/nldb_query/: __init__.py  cli.py  core.py  formatters.py  models.py  validators.py  version.py
src/nldb_query/mcp/: __init__.py  handlers.py  protocol.py  server.py
src/nldb_query/nlp/: __init__.py  analyzer.py  intent.py  processor.py  translator.py
src/nldb_query/utils/: __init__.py  config.py
